# log-server

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  web-server-logs.example.json
.github/workflows/: ci.yml
api/logs/: create.sh  get.sh
docker/db/: init.sql
docs/: README.md  SRD.md  TESTING.md  openapi.yaml
examples/websocket-events-client/python/: main.py
scripts/: README.md  test.sh  todo-advanced.sh  todo-scanner.sh
src/: error.rs  lib.rs  main.rs  models.rs
src/dto/: common.rs  log_dto.rs  mod.rs  schema_dto.rs
src/handlers/: log_handlers.rs  mod.rs  schema_handlers.rs  ws_handlers.rs
src/middleware/: mod.rs  request_id.rs
src/models/: log_model.rs  schema_model.rs
src/repositories/: log_repository.rs  mod.rs  schema_repository.rs
src/services/: log_service.rs  mod.rs  schema_service.rs
testing/: Dockerfile.test-runner  README.md  benchmark.py  config.env
tests/: api.rs  integration_test.rs
tests/common/: context.rs  fixtures.rs  mod.rs
tests/logs/: create.rs  delete.rs  mod.rs  read.rs
tests/schemas/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
tests/websockets/: connection.rs  events.rs  mod.rs
