[package]
name = "log-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = "0.33.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"